Fix cursor position on Firefox

--- a/src/styles/game/layer-text.scss
+++ b/src/styles/game/layer-text.scss
@@ -36,7 +36,6 @@
 	span {
 		white-space: pre-wrap;
 		overflow-wrap: break-word;
-		position: relative;
 	}
 	.dash {
 		text-shadow: #000 .8px .8px .6px, #000 -.8px .8px .6px,
